# esp-idf-ili9340

./: CMakeLists.txt
driver/: fontx.c  ili9340.c
driver/include/: fontx.h  ili9340.h
font/: N.xcf  index.html
